# agirobots_ros

./: README.md
robots/SB1_Core/: CMakeLists.txt  README.md  package.xml
robots/SB1_Core/launch/: SB1_Core_display.launch.py
robots/SB1_Core/meshes/: base_cover.stl  base_top_plate.stl  camera_d435_housing.stl  front_left_emergency_button_base.stl  front_left_wheel_cover.stl  front_left_wheel_tire.stl  front_right_emergency_button.stl  front_right_emergency_button_base.stl  front_right_wheel_motor.stl  front_right_wheel_tire.stl  mid360_cover.stl  mid360_sensor.stl  rear_right_wheel_tire.stl
robots/SB1_Core/rviz/: SB1_Core_display.rviz
robots/SB1_Core/urdf/: SB1_Core.urdf
robots/mate_p1w/: CMakeLists.txt  package.xml
robots/mate_p1w/launch/: display.launch.py
robots/mate_p1w/meshes/: left_front_mobile_base_wheel.stl  left_gripper_base_link.stl  left_gripper_left_jaw_link.stl  left_gripper_right_jaw_link.stl  left_rear_mobile_base_steering_link.stl  left_shoulder_cover.stl  (+7 more)
robots/mate_p1w_description/: README.md
robots/sb1_core_description/: .gitignore  CMakeLists.txt  README.md  package.xml
robots/sb1_core_description/launch/: sb1_core_display.launch.py
robots/sb1_core_description/meshes/: base_slot_track_rail.stl  camera_d435_sensor.stl  front_left_emergency_button.stl  front_left_wheel_motor.stl  front_right_wheel_cover.stl  rear_left_wheel_cover.stl  rear_left_wheel_motor.stl  rear_left_wheel_tire.stl  rear_mid360_sensor.stl  rear_right_wheel_cover.stl  rear_right_wheel_motor.stl  speaker.stl
robots/sb1_core_description/urdf/: sb1_core.urdf
(+22 files in other folders)
